--- a/Resources/layouts/@gallery.item.latte
+++ b/Resources/layouts/@gallery.item.latte
@@ -1,5 +1,3 @@
-{define #page-content}
+{block #page-content}
 
-	{control item $presenter->route, config => [ variant => '@gallery.item' ]}
-
-{/define}
+{control item $presenter->route, config => [ variant => '@gallery.item' ]}
