--- a/Resources/layouts/@gallery.route.latte
+++ b/Resources/layouts/@gallery.route.latte
@@ -1,7 +1,5 @@
-{define #page-content}
+{block #page-content}
 
-	{control pagination, config => [ variant => '@gallery.route' ]}
-	{control itemList $control->getItemsBuilder()->orderBy('r.released', 'DESC')->getQuery()->getResult(), config => [ variant => '@gallery.route' ]}
-	{control pagination, config => [ variant => '@gallery.route' ]}
-
-{/define}
+{control pagination, config => [ variant => '@gallery.route' ]}
+{control itemList $control->getItemsBuilder()->orderBy('r.released', 'DESC')->getQuery()->getResult(), config => [ variant => '@gallery.route' ]}
+{control pagination, config => [ variant => '@gallery.route' ]}
